测试第二种加载方式

--- a/news.html
+++ b/news.html
@@ -5,9 +5,9 @@
 <meta name="viewport" content="width=960">
 <style>.anim{visibility:hidden}</style>
 <title>&#x9986;&#x5185;&#x65b0;&#x95fb;</title>
-<link rel="stylesheet" type="text/css" href="css/site.20170823221812.css">
+<link rel="stylesheet" type="text/css" href="css/site.20170823230814.css">
 <!--[if lte IE 7]>
-<link rel="stylesheet" type="text/css" href="css/site.20170823221812-lteIE7.css">
+<link rel="stylesheet" type="text/css" href="css/site.20170823230814-lteIE7.css">
 <![endif]-->
 </head>
 <body id="body">
@@ -35,10 +35,16 @@
 <div class="pos-33 vis-2 section-2">
 <div class="vis pos-10 size-38 cont-9">
 <div class="wrapper-2">
-<div id="main"></div>
-
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"> 
+<html> 
+<head> 
+<meta http-equiv="Content-type" content="text/html; charset=utf-8"> 
 <script type="text/javascript" src="js/jquery.js"></script>
+<title>啦啦啦</title> 
 
+</head> 
+<body> 
+<div id="main"></div>
 <style type="text/css"> 
 .left a{
 	font-size:18px; 
@@ -146,6 +152,8 @@ img{
 	getList();
 </script>
 
+</body> 
+</html> 
 </div>
 </div>
 <div class="vis pos-38 size-13 cont-10"></div>
@@ -164,7 +172,7 @@ img{
 </div>
 <script type="text/javascript" src="js/jquery.js"></script>
 <script type="text/javascript" src="js/woolite.js"></script>
-<script type="text/javascript" src="js/news.20170823221812.js"></script>
+<script type="text/javascript" src="js/news.20170823230814.js"></script>
 <script type="text/javascript">
 var ver=RegExp(/Mozilla\/5\.0 \(Linux; .; Android ([\d.]+)/).exec(navigator.userAgent);if(ver&&parseFloat(ver[1])<5){document.getElementsByTagName('body')[0].className+=' whitespacefix';}
 </script>
