--- a/article.html
+++ b/article.html
@@ -5,35 +5,32 @@
 <meta name="viewport" content="width=960">
 <style>.anim{visibility:hidden}</style>
 <title>&#x65b0;&#x95fb;&#x5185;&#x5bb9;</title>
-<link rel="stylesheet" type="text/css" href="css/site.20170823230814.css">
+<link rel="stylesheet" type="text/css" href="css/site.20170824000318.css">
 <!--[if lte IE 7]>
-<link rel="stylesheet" type="text/css" href="css/site.20170823230814-lteIE7.css">
+<link rel="stylesheet" type="text/css" href="css/site.20170824000318-lteIE7.css">
 <![endif]-->
 </head>
 <body id="body">
-<div class="vis pos size-2 cont-11">
+<div class="vis pos size-2 cont-10">
 <div class="pos vis-2 section">
 <div class="vis pos-3 size-3 cont-3">
-<div class="anim fadeInDown js-62 vis pos-3 size-4 cont-32">
+<div class="anim fadeInDown js-57 vis pos-3 size-4 cont-31">
 <a class="button vis-3 pos-4 size-5 font" href="index.html">万忠墓</a>
 </div>
-<div class="anim fadeInDown js-63 vis pos-5 size-6 cont-6">
+<div class="anim fadeInDown js-58 vis pos-5 size-6 cont-4">
 <a class="button vis-3 pos-4 size-7 font-2" href="people.html">人物简介</a>
 </div>
-<div class="anim fadeInDown js-64 vis pos-6 size-6 cont-4">
+<div class="anim fadeInDown js-59 vis pos-6 size-6 cont-13">
 <a class="button vis-3 pos-4 size-7 font-2" href="history.html">历史事件</a>
 </div>
-<div class="anim fadeInDown js-65 vis pos-7 size-6 cont-31">
-<a class="button vis-3 pos-4 size-7 font-2" href="news.html">馆内新闻</a>
-</div>
-<div class="anim fadeInDown js-66 vis pos-8 size-6 cont-13">
+<div class="anim fadeInDown js-60 vis pos-7 size-6 cont-5">
 <a class="button vis-3 pos-4 size-7 font-2" href="way.html">参观指南</a>
 </div>
 </div>
 </div>
 </div>
-<div class="pos-33 vis-2 section-2">
-<div class="vis pos-3 size-47 cont-9">
+<div class="pos-32 vis-2 section-2">
+<div class="vis pos-3 size-48 cont-8">
 <div class="wrapper-3">
 <div id="container"></div>
 <div id="main">
@@ -131,23 +128,22 @@
 </script> 
 </div>
 </div>
-<div class="vis pos-73 size-13 cont-10"></div>
-<div class="vis pos-14 size-14 cont-3">
-<div class="vis pos-3 size-15 cont-9">
-<p class="para-2"><span class="font-7">&#x7248;&#x6743;&#x6240;&#x6709;&#xff1a; &#x4e07;&#x5fe0;&#x5893;&#x7eaa;&#x5ff5;&#x9986; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></p>
-<p class="para-2"><span class="font-7">&#x5730;&#x5740;&#xff1a;&nbsp;&nbsp;&#x8fbd;&#x5b81;&#x7701;&#x5927;&#x8fde;&#x5e02;&#x65c5;&#x987a;&#x53e3;&#x533a;&#x4e5d;&#x4e09;&#x8def;23&#x53f7;</span></p>
-<p class="para-2"><span class="font-7">&#x7535;&#x8bdd;&#xff1a;&#xff08;0411&#xff09;86612924</span></p>
+<div class="vis pos-73 size-13 cont-9"></div>
+<div class="vis pos-13 size-14 cont-3">
+<div class="vis pos-3 size-15 cont-8">
+<p class="para-2"><span class="font-7">&#x7248;&#x6743;&#x6240;&#x6709;&#xff1a;</span><span class="font-7"> </span><span class="font-7">&#x4e07;&#x5fe0;&#x5893;&#x7eaa;&#x5ff5;&#x9986;</span><span class="font-7"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></p>
+<p class="para-2"><span class="font-7">&#x5730;&#x5740;&#xff1a;</span><span class="font-7">&nbsp;&nbsp;</span><span class="font-7">&#x8fbd;&#x5b81;&#x7701;&#x5927;&#x8fde;&#x5e02;&#x65c5;&#x987a;&#x53e3;&#x533a;&#x4e5d;&#x4e09;&#x8def;</span><span class="font-7">23</span><span class="font-7">&#x53f7;</span></p>
+<p class="para-2"><span class="font-7">&#x7535;&#x8bdd;&#xff1a;&#xff08;</span><span class="font-7">0411</span><span class="font-7">&#xff09;</span><span class="font-7">86612924</span></p>
 </div>
-<div class="vis pos-10 size-16 cont-9">
-<p class="para-2"><span class="font-7"> web:&nbsp;&nbsp;github</span></p>
-<p class="para-2"><span class="font-7">&#x90ae;&#x653f;&#x7f16;&#x7801;&#xff1a;116041</span></p>
-<p class="para-2"><span class="font-7">&#x5236;&#x4f5c;&amp;&#x7ef4;&#x62a4;&#xff1a; &#x4e1c;&#x5317;&#x5927;&#x5b66;&#x8ba1;&#x7b97;&#x673a;&#x5b66;&#x9662;</span></p>
+<div class="vis pos-9 size-16 cont-8">
+<p class="para-2"><span class="font-7">&#x90ae;&#x653f;&#x7f16;&#x7801;&#xff1a;</span><span class="font-7">116041</span></p>
+<p class="para-2"><span class="font-7">&#x5236;&#x4f5c;</span><span class="font-7">&amp;</span><span class="font-7">&#x7ef4;&#x62a4;&#xff1a;</span><span class="font-7"> </span><span class="font-7">&#x4e1c;&#x5317;&#x5927;&#x5b66;&#x8ba1;&#x7b97;&#x673a;&#x5b66;&#x9662;</span></p>
 </div>
 </div>
 </div>
 <script type="text/javascript" src="js/jquery.js"></script>
 <script type="text/javascript" src="js/woolite.js"></script>
-<script type="text/javascript" src="js/article.20170823230814.js"></script>
+<script type="text/javascript" src="js/article.20170824000318.js"></script>
 <script type="text/javascript">
 var ver=RegExp(/Mozilla\/5\.0 \(Linux; .; Android ([\d.]+)/).exec(navigator.userAgent);if(ver&&parseFloat(ver[1])<5){document.getElementsByTagName('body')[0].className+=' whitespacefix';}
 </script>
