--- a/people.html
+++ b/people.html
@@ -5,129 +5,125 @@
 <meta name="viewport" content="width=960">
 <style>.anim{visibility:hidden}</style>
 <title>&#x4eba;&#x7269;&#x7b80;&#x4ecb;</title>
-<link rel="stylesheet" type="text/css" href="css/site.20170823230814.css">
+<link rel="stylesheet" type="text/css" href="css/site.20170824000318.css">
 <!--[if lte IE 7]>
-<link rel="stylesheet" type="text/css" href="css/site.20170823230814-lteIE7.css">
+<link rel="stylesheet" type="text/css" href="css/site.20170824000318-lteIE7.css">
 <![endif]-->
 </head>
 <body id="body">
-<div class="vis pos size-2 cont-11">
+<div class="vis pos size-2 cont-10">
 <div class="pos vis-2 section">
 <div class="vis pos-3 size-3 cont-3">
-<div class="anim fadeInDown js-10 vis pos-3 size-4 cont-12">
+<div class="anim fadeInDown js-9 vis pos-3 size-4 cont-11">
 <a class="button vis-3 pos-4 size-5 font" href="index.html">万忠墓</a>
 </div>
-<div class="anim fadeInDown js-11 vis pos-5 size-6 cont-13">
+<div class="anim fadeInDown js-10 vis pos-5 size-6 cont-12">
 <a class="button vis-3 pos-4 size-7 font-2" href="#">人物简介</a>
 </div>
-<div class="anim fadeInDown js-12 vis pos-6 size-6 cont-14">
+<div class="anim fadeInDown js-11 vis pos-6 size-6 cont-6">
 <a class="button vis-3 pos-4 size-7 font-2" href="history.html">历史事件</a>
 </div>
-<div class="anim fadeInDown js-13 vis pos-7 size-6 cont-7">
-<a class="button vis-3 pos-4 size-7 font-2" href="news.html">馆内新闻</a>
-</div>
-<div class="anim fadeInDown js-14 vis pos-8 size-6 cont-8">
+<div class="anim fadeInDown js-12 vis pos-7 size-6 cont-13">
 <a class="button vis-3 pos-4 size-7 font-2" href="way.html">参观指南</a>
 </div>
 </div>
 </div>
 </div>
-<div class="pos-15 vis-2 section-2">
-<div class="vis pos-16 size-17 cont-15">
-<div class="vis pos-17 size-18 cont-3">
-<div class="vis pos-3 size-19 cont-16">
-<picture class="img-2 js-21">
+<div class="pos-14 vis-2 section-2">
+<div class="vis pos-15 size-17 cont-14">
+<div class="vis pos-16 size-18 cont-3">
+<div class="vis pos-3 size-19 cont-15">
+<picture class="img-2 js-19">
 <source data-srcset="images/ding-ru-chang-189.jpg 1x, images/ding-ru-chang-378.jpg 2x">
-<img data-src="images/ding-ru-chang-189.jpg" alt="" class="js-15 anim fadeIn img">
+<img data-src="images/ding-ru-chang-189.jpg" alt="" class="js-13 anim fadeIn img">
 </picture>
 </div>
-<div class="vis pos-18 size-20 cont-17">
+<div class="vis pos-17 size-20 cont-16">
 <p class="para-3"><span class="font-8">[</span><span class="font-9">&#x4e01;&#x6c5d;&#x660c;</span><span class="font-8">]</span><span class="font-3">&#xff08;</span><span class="font-4">1836-1895</span><span class="font-3">&#xff09;&#x5b57;&#x79b9;&#x5ef7;&#xff0c;&#x5b89;&#x5fbd;&#x5e90;&#x6c5f;&#x4eba;&#x3002;</span><span class="font-4">1888</span><span class="font-3">&#x5e74;&#xff08;&#x5149;&#x7eea;&#x5341;&#x56db;&#x5e74;&#xff09;&#x4efb;&#x5317;&#x6d0b;&#x6d77;&#x519b;&#x63d0;&#x7763;&#xff0c;&#x4e8e;&#x65c5;&#x987a;&#x3001;&#x5a01;&#x6d77;&#x5206;&#x522b;&#x8bbe;&#x7acb;&#x63d0;&#x7763;&#x5e9c;&#x7f72;&#x3002;</span><span class="font-4">1894</span><span class="font-3">&#x5e74;</span><span class="font-4">9</span><span class="font-3">&#x6708;</span><span class="font-4">17</span><span class="font-3">&#x65e5;&#xff0c;&#x7387;&#x5317;&#x6d0b;&#x8230;&#x961f;&#x4ece;&#x5927;&#x4e1c;&#x6c9f;&#x8fd4;&#x56de;&#x65c5;&#x987a;&#x9014;&#x4e2d;&#xff0c;&#x4e0e;&#x65e5;&#x672c;&#x6d77;&#x519b;&#x8054;&#x5408;&#x8230;&#x961f;&#x53d1;&#x751f;&#x6fc0;&#x6218;&#xff08;&#x5373;&#x9ec4;&#x6d77;&#x6d77;&#x6218;&#xff09;&#xff0c;&#x53d7;&#x521b;&#xff0c;&#x5949;&#x674e;&#x9e3f;&#x7ae0;&#x4e4b;&#x547d;&#x9000;&#x5b88;&#x5a01;&#x6d77;&#x3002;&#x7fcc;&#x5e74;</span><span class="font-4">2</span><span class="font-3">&#x6708;&#xff0c;&#x65e5;&#x672c;&#x6d77;&#x9646;&#x519b;&#x56f4;&#x653b;&#x5a01;&#x6d77;&#xff0c;&#x7387;&#x90e8;&#x6297;&#x6218;&#xff0c;&#x62d2;&#x7edd;&#x6295;&#x964d;&#xff0c;&#x540e;&#x5175;&#x8d25;&#x81ea;&#x6740;&#x3002;</span></p>
 </div>
 </div>
 </div>
-<div class="vis pos-19 size-17 cont-18">
-<div class="vis pos-20 size-21 cont-3">
-<div class="vis pos-3 size-22 cont-6">
+<div class="vis pos-18 size-17 cont-17">
+<div class="vis pos-19 size-21 cont-3">
+<div class="vis pos-3 size-22 cont-5">
 <p class="para-3"><span class="font-8">[</span><span class="font-9">&#x5b8b;</span><span class="font-8"> </span><span class="font-9">&#x5e86;</span><span class="font-8">]</span><span class="font-3">&#xff08;</span><span class="font-4">1820-1902</span><span class="font-3">&#xff09;&#x5b57;&#x795d;&#x4e09;&#xff0c;&#x5c71;&#x4e1c;&#x84ec;&#x83b1;&#x4eba;&#xff0c;&#x6e05;&#x672b;&#x6bc5;&#x519b;&#x56db;&#x5ddd;&#x63d0;&#x7763;&#xff0c;&#x9a7b;&#x5b88;&#x65c5;&#x987a;&#x957f;&#x8fbe;</span><span class="font-4">14</span><span class="font-3">&#x5e74;&#x3002;</span><span class="font-4">1882</span><span class="font-3">&#x5e74;&#xff08;&#x5149;&#x7eea;&#x516b;&#x5e74;&#xff09;&#xff0c;&#x7387;&#x6bc5;&#x519b;&#x4e5d;&#x8425;&#x4e00;&#x54e8;&#x79fb;&#x9a7b;&#x65c5;&#x987a;&#x3002;&#x65c5;&#x987a;&#x5931;&#x9677;&#x540e;&#xff0c;&#x8f6c;&#x6218;&#x590d;&#x5dde;&#xff0c;&#x540e;&#x9000;&#x5b88;&#x76d6;&#x5e73;&#x3002;</span><span class="font-4">1895</span><span class="font-3">&#x5e74;&#x672b;&#xff0c;&#x65e5;&#x519b;&#x64a4;&#x51fa;&#x65c5;&#x987a;&#x540e;&#xff0c;&#x4ee5;&#x5317;&#x6d0b;&#x5e2e;&#x529e;&#x5927;&#x81e3;&#x8eab;&#x4efd;&#x7387;&#x6bc5;&#x519b;&#x4e8c;&#x6b21;&#x9a7b;&#x9632;&#x65c5;&#x987a;&#xff0c;&#x4fee;&#x590d;&#x70ae;&#x53f0;&#x3001;&#x8239;&#x575e;&#x3002;</span><span class="font-4">1902</span><span class="font-3">&#x5e74;&#x75c5;&#x6545;&#x3002;</span></p>
 </div>
-<div class="vis pos-21 size-19 cont-19">
-<picture class="img-4 js-22">
+<div class="vis pos-20 size-19 cont-18">
+<picture class="img-4 js-20">
 <source data-srcset="images/song-qing-200.jpg 1x, images/song-qing-400.jpg 2x">
-<img data-src="images/song-qing-200.jpg" alt="" class="js-16 img-3">
+<img data-src="images/song-qing-200.jpg" alt="" class="js-14 img-3">
 </picture>
 </div>
 </div>
 </div>
-<div class="vis pos-22 size-17 cont-20">
-<div class="vis pos-23 size-23 cont-3">
-<div class="vis pos-3 size-24 cont-21">
-<picture class="img-6 js-23">
+<div class="vis pos-21 size-17 cont-19">
+<div class="vis pos-22 size-23 cont-3">
+<div class="vis pos-3 size-24 cont-20">
+<picture class="img-6 js-21">
 <source data-srcset="images/deng-shi-chang-280.jpg 1x, images/deng-shi-chang-560.jpg 2x">
-<img data-src="images/deng-shi-chang-280.jpg" alt="" class="js-17 img-5">
+<img data-src="images/deng-shi-chang-280.jpg" alt="" class="js-15 img-5">
 </picture>
 </div>
-<div class="vis pos-24 size-25 cont-22">
+<div class="vis pos-23 size-25 cont-21">
 <p class="para-3"><span class="font-8">[</span><span class="font-9">&#x9093;&#x4e16;&#x660c;</span><span class="font-8">]</span><span class="font-3">&#xff08;</span><span class="font-4">1849-1894</span><span class="font-3">&#xff09;&#x5b57;&#x6b63;&#x537f;&#xff0c;&#x5e7f;&#x4e1c;&#x756a;&#x79ba;&#x4eba;&#x3002;&#x6e05;&#x672b;&#x5317;&#x6d0b;&#x6d77;&#x519b;&#x5c06;&#x9886;&#xff0c;</span><span class="font-4">&ldquo;</span><span class="font-3">&#x81f4;&#x8fdc;</span><span class="font-4">&rdquo;</span><span class="font-3">&#x8230;&#x7ba1;&#x5e26;&#x3002;&#x798f;&#x5dde;&#x8239;&#x653f;&#x5b66;&#x5802;&#x7b2c;&#x4e00;&#x5c4a;&#x6bd5;&#x4e1a;&#x751f;&#x3002;&#x7532;&#x5348;&#x4e2d;&#x65e5;&#x9ec4;&#x6d77;&#x6d77;&#x6218;&#x4e2d;&#xff0c;&#x7387;</span><span class="font-4">&ldquo;</span><span class="font-3">&#x81f4;&#x8fdc;</span><span class="font-4">&rdquo;</span><span class="font-3">&#x8230;&#x52c7;&#x51a0;&#x5168;&#x519b;&#xff0c;&#x591a;&#x6b21;&#x51fb;&#x4e2d;&#x65e5;&#x8230;&#xff0c;&#x63a9;&#x62a4;&#x65d7;&#x8230;&#x3002;&#x5728;&#x5f39;&#x836f;&#x7528;&#x5c3d;&#x65f6;&#xff0c;&#x4eb2;&#x81ea;&#x628a;&#x8235;&#x5411;&#x65e5;&#x8230;</span><span class="font-4">&ldquo;</span><span class="font-3">&#x5409;&#x91ce;</span><span class="font-4">&rdquo;</span><span class="font-3">&#x53f7;&#x649e;&#x51fb;&#xff0c;&#x4e0d;&#x5e78;&#x88ab;&#x9c7c;&#x96f7;&#x51fb;&#x4e2d;&#xff0c;&#x4e0e;&#x5168;&#x8230;&#x5c06;&#x58eb;&#x6b89;&#x56fd;&#x3002;</span></p>
 </div>
 </div>
 </div>
-<div class="vis pos-25 size-26 cont-23">
-<div class="vis pos-26 size-27 cont-3">
-<div class="vis pos-3 size-28 cont-24">
+<div class="vis pos-24 size-26 cont-22">
+<div class="vis pos-25 size-27 cont-3">
+<div class="vis pos-3 size-28 cont-23">
 <p class="para-3"><span class="font-8">[</span><span class="font-9">&#x6797;&#x6c38;&#x5347;</span><span class="font-8">]</span><span class="font-3">&#xff08;</span><span class="font-4">1853-1894</span><span class="font-3">&#xff09;&#x5b57;&#x949f;&#x537f;&#xff0c;&#x798f;&#x5efa;&#x4faf;&#x5b98;&#x4eba;&#x3002;&#x6e05;&#x672b;&#x5317;&#x6d0b;&#x6d77;&#x519b;&#x5c06;&#x9886;&#x3002;&#x6bd5;&#x4e1a;&#x4e8e;&#x798f;&#x5dde;&#x8239;&#x653f;&#x5b66;&#x5802;&#xff0c;&#x540e;&#x88ab;&#x6d3e;&#x5230;&#x82f1;&#x56fd;&#x7559;&#x5b66;&#x3002;</span><span class="font-4">1880</span><span class="font-3">&#x5e74;&#x8c03;&#x5317;&#x6d0b;&#x6d77;&#x519b;&#x3002;&#x7532;&#x5348;&#x6218;&#x4e89;&#x7206;&#x53d1;&#x540e;&#xff0c;&#x4e25;&#x683c;&#x7763;&#x52b1;&#x5c06;&#x58eb;&#xff0c;&#x52e4;&#x4e8e;&#x64cd;&#x7ec3;&#x3002;&#x9ec4;&#x6d77;&#x6d77;&#x6218;&#x4e2d;&#xff0c;&#x8230;&#x8eab;&#x591a;&#x5904;&#x4e2d;&#x5f39;&#xff0c;&#x4ecd;&#x4e34;&#x5371;&#x4e0d;&#x60e7;&#xff0c;&#x7ec8;&#x56e0;&#x5be1;&#x4e0d;&#x654c;&#x4f17;&#xff0c;&#x8239;&#x8eab;&#x788e;&#x88c2;&#xff0c;&#x4e2d;&#x5f39;&#x58ee;&#x70c8;&#x727a;&#x7272;&#x3002;</span></p>
 <p class="para-3"><span class="font-4">&nbsp;</span></p>
 <p class="para-3"><span class="font-8">[</span><span class="font-9">&#x5f90;&#x90a6;&#x9053;</span><span class="font-8">]</span><span class="font-3">&#xff08;</span><span class="font-4">1837-1895</span><span class="font-3">&#xff09;&#x5b57;&#x89c1;&#x519c;&#xff0c;&#x56db;&#x5ddd;&#x6daa;&#x9675;&#x4eba;&#xff0c;&#x6cb3;&#x5317;&#x6b63;&#x5b9a;&#x9547;&#x603b;&#x5175;&#x3002;</span><span class="font-4">1894</span><span class="font-3">&#x5e74;</span><span class="font-4">10</span><span class="font-3">&#x6708;&#x589e;&#x9632;&#x65c5;&#x987a;&#x3002;&#x65e5;&#x519b;&#x8fdb;&#x653b;&#x65c5;&#x987a;&#x65f6;&#xff0c;&#x4e0e;&#x536b;&#x6c5d;&#x6210;&#x7387;&#x519b;&#x5728;&#x571f;&#x57ce;&#x5b50;&#x3001;&#x53cc;&#x53f0;&#x6c9f;&#x4e0e;&#x65e5;&#x519b;&#x6fc0;&#x6218;&#x3002;&#x540e;&#x8d1f;&#x8d23;&#x5b88;&#x536b;&#x4e1c;&#x671b;&#x53f0;&#x70ae;&#x53f0;&#xff0c;&#x8eab;&#x5148;&#x58eb;&#x5352;&#xff0c;&#x6307;&#x6325;&#x4f5c;&#x6218;&#xff0c;&#x575a;&#x6301;&#x5230;&#x6700;&#x540e;&#x9000;&#x51fa;&#x65c5;&#x987a;&#x3002;</span></p>
 </div>
-<div class="vis pos-27 size-29 cont-25">
-<picture class="img-8 js-24">
+<div class="vis pos-26 size-29 cont-24">
+<picture class="img-8 js-22">
 <source data-srcset="images/lin-yong-sheng-140.jpg 1x, images/lin-yong-sheng-280.jpg 2x">
-<img data-src="images/lin-yong-sheng-140.jpg" alt="" class="js-18 img-7">
+<img data-src="images/lin-yong-sheng-140.jpg" alt="" class="js-16 img-7">
 </picture>
 </div>
-<div class="vis pos-28 size-30 cont-26">
-<picture class="img-10 js-25">
+<div class="vis pos-27 size-30 cont-25">
+<picture class="img-10 js-23">
 <source data-srcset="images/xu-bang-dao-130.jpg 1x, images/xu-bang-dao-260.jpg 2x">
-<img data-src="images/xu-bang-dao-130.jpg" alt="" class="js-19 img-9">
+<img data-src="images/xu-bang-dao-130.jpg" alt="" class="js-17 img-9">
 </picture>
 </div>
 </div>
 </div>
-<div class="vis pos-29 size-31 cont-3">
+<div class="vis pos-28 size-31 cont-3">
 <div class="vis pos-3 size-31 colwrapper">
-<div class="vis pos-3 size-31 cont-27">
-<div class="vis pos-30 size-32 cont-28">
-<picture class="img-12 js-26">
+<div class="vis pos-3 size-31 cont-26">
+<div class="vis pos-29 size-32 cont-27">
+<picture class="img-12 js-24">
 <source data-srcset="images/lu-shun-da-tu-sha-267.jpg 1x, images/lu-shun-da-tu-sha-534.jpg 2x">
-<img data-src="images/lu-shun-da-tu-sha-267.jpg" alt="" class="js-20 img-11">
+<img data-src="images/lu-shun-da-tu-sha-267.jpg" alt="" class="js-18 img-11">
 </picture>
 </div>
 </div>
-<div class="vis pos-31 size-33 cont-29">
+<div class="vis pos-30 size-33 cont-28">
 <p class="para-3"><span class="font-8">[</span><span class="font-9">&#x5927;&#x5c71;&#x5ca9;</span><span class="font-8">]</span><span class="font-3">&#xff08;</span><span class="font-4">1842-1914</span><span class="font-3">&#xff09;&#x65e5;&#x672c;&#x9e7f;&#x513f;&#x5c9b;&#x4eba;&#x3002;</span><span class="font-4">1894</span><span class="font-3">&#x5e74;&#x53c2;&#x4e0e;&#x5236;&#x5b9a;&#x4fb5;&#x7565;&#x4e2d;&#x56fd;&#x4f5c;&#x6218;&#x8ba1;&#x5212;&#xff0c;&#x540c;&#x5e74;</span><span class="font-4">9</span><span class="font-3">&#x6708;&#x4efb;&#x65e5;&#x672c;&#x7b2c;&#x4e8c;&#x519b;&#x53f8;&#x4ee4;&#x5b98;&#xff0c;&#x4e8e;</span><span class="font-4">10</span><span class="font-3">&#x6708;&#x4e0b;&#x65ec;&#x7387;&#x90e8;&#x7531;&#x82b1;&#x56ed;&#x53e3;&#x767b;&#x9646;&#x3002;&#x653b;&#x9677;&#x65c5;&#x987a;&#x53e3;&#x540e;&#xff0c;&#x7eb5;&#x5175;&#x5c60;&#x6740;&#x4e2d;&#x56fd;&#x65e0;&#x8f9c;&#x767e;&#x59d3;&#x8fd1;</span><span class="font-4">2</span><span class="font-3">&#x4e07;&#x4eba;&#xff0c;&#x5236;&#x9020;&#x4e86;&#x9707;&#x60ca;&#x4e16;&#x754c;&#x7684;&#x65c5;&#x987a;&#x53e3;&#x5927;&#x5c60;&#x6740;&#x60e8;&#x6848;&#x3002;</span></p>
 <p class="para-3"><span class="font-4">&nbsp;</span></p>
 <p class="para-3"><span class="font-8">[</span><span class="font-9">&#x5c71;&#x5730;&#x5143;&#x6cbb;</span><span class="font-8">]</span><span class="font-3">&#xff08;&#xff1f;</span><span class="font-4">-1897</span><span class="font-3">&#xff09;</span><span class="font-4">1894</span><span class="font-3">&#x5e74;&#x4e2d;&#x65e5;&#x7532;&#x5348;&#x6218;&#x4e89;&#x7206;&#x53d1;&#x65f6;&#x4efb;&#x7b2c;&#x4e00;&#x5e08;&#x56e2;&#x957f;&#xff0c;&#x7387;&#x90e8;&#x4e8e;&#x8fbd;&#x4e1c;&#x534a;&#x5c9b;&#x82b1;&#x56ed;&#x53e3;&#x767b;&#x9646;&#xff0c;&#x540c;&#x5e74;</span><span class="font-4">11</span><span class="font-3">&#x6708;&#x5148;&#x540e;&#x653b;&#x5360;&#x91d1;&#x5dde;&#x57ce;&#x3001;&#x5927;&#x8fde;&#x6e7e;&#x3001;&#x65c5;&#x987a;&#x3002;&#x7eb5;&#x5175;&#x8650;&#x6740;&#x56db;&#x65e5;&#xff0c;&#x6740;&#x5bb3;&#x65c5;&#x987a;&#x5e02;&#x533a;&#x65e0;&#x8f9c;&#x5e73;&#x6c11;&#x8fd1;</span><span class="font-4">2</span><span class="font-3">&#x4e07;&#x4eba;&#xff0c;&#x5236;&#x9020;&#x4e86;&#x9a87;&#x4eba;&#x542c;&#x95fb;&#x7684;&#x65c5;&#x987a;&#x53e3;&#x5927;&#x5c60;&#x6740;&#x60e8;&#x6848;&#x3002;</span></p>
 </div>
 </div>
 </div>
-<div class="vis pos-32 size-13 cont-10"></div>
-<div class="vis pos-14 size-14 cont-3">
-<div class="vis pos-3 size-15 cont-9">
-<p class="para-2"><span class="font-7">&#x7248;&#x6743;&#x6240;&#x6709;&#xff1a; &#x4e07;&#x5fe0;&#x5893;&#x7eaa;&#x5ff5;&#x9986; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></p>
-<p class="para-2"><span class="font-7">&#x5730;&#x5740;&#xff1a;&nbsp;&nbsp;&#x8fbd;&#x5b81;&#x7701;&#x5927;&#x8fde;&#x5e02;&#x65c5;&#x987a;&#x53e3;&#x533a;&#x4e5d;&#x4e09;&#x8def;23&#x53f7;</span></p>
-<p class="para-2"><span class="font-7">&#x7535;&#x8bdd;&#xff1a;&#xff08;0411&#xff09;86612924</span></p>
+<div class="vis pos-31 size-13 cont-9"></div>
+<div class="vis pos-13 size-14 cont-3">
+<div class="vis pos-3 size-15 cont-8">
+<p class="para-2"><span class="font-7">&#x7248;&#x6743;&#x6240;&#x6709;&#xff1a;</span><span class="font-7"> </span><span class="font-7">&#x4e07;&#x5fe0;&#x5893;&#x7eaa;&#x5ff5;&#x9986;</span><span class="font-7"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></p>
+<p class="para-2"><span class="font-7">&#x5730;&#x5740;&#xff1a;</span><span class="font-7">&nbsp;&nbsp;</span><span class="font-7">&#x8fbd;&#x5b81;&#x7701;&#x5927;&#x8fde;&#x5e02;&#x65c5;&#x987a;&#x53e3;&#x533a;&#x4e5d;&#x4e09;&#x8def;</span><span class="font-7">23</span><span class="font-7">&#x53f7;</span></p>
+<p class="para-2"><span class="font-7">&#x7535;&#x8bdd;&#xff1a;&#xff08;</span><span class="font-7">0411</span><span class="font-7">&#xff09;</span><span class="font-7">86612924</span></p>
 </div>
-<div class="vis pos-10 size-16 cont-9">
-<p class="para-2"><span class="font-7"> web:&nbsp;&nbsp;github</span></p>
-<p class="para-2"><span class="font-7">&#x90ae;&#x653f;&#x7f16;&#x7801;&#xff1a;116041</span></p>
-<p class="para-2"><span class="font-7">&#x5236;&#x4f5c;&amp;&#x7ef4;&#x62a4;&#xff1a; &#x4e1c;&#x5317;&#x5927;&#x5b66;&#x8ba1;&#x7b97;&#x673a;&#x5b66;&#x9662;</span></p>
+<div class="vis pos-9 size-16 cont-8">
+<p class="para-2"><span class="font-7">&#x90ae;&#x653f;&#x7f16;&#x7801;&#xff1a;</span><span class="font-7">116041</span></p>
+<p class="para-2"><span class="font-7">&#x5236;&#x4f5c;</span><span class="font-7">&amp;</span><span class="font-7">&#x7ef4;&#x62a4;&#xff1a;</span><span class="font-7"> </span><span class="font-7">&#x4e1c;&#x5317;&#x5927;&#x5b66;&#x8ba1;&#x7b97;&#x673a;&#x5b66;&#x9662;</span></p>
 </div>
 </div>
 </div>
 <script type="text/javascript" src="js/jquery.js"></script>
 <script type="text/javascript" src="js/woolite.js"></script>
 <script type="text/javascript" src="js/unveil.js"></script>
-<script type="text/javascript" src="js/people.20170823230814.js"></script>
+<script type="text/javascript" src="js/people.20170824000318.js"></script>
 <script type="text/javascript">
 var ver=RegExp(/Mozilla\/5\.0 \(Linux; .; Android ([\d.]+)/).exec(navigator.userAgent);if(ver&&parseFloat(ver[1])<5){document.getElementsByTagName('body')[0].className+=' whitespacefix';}
 </script>
