添加站长统计

--- a/index.html
+++ b/index.html
@@ -64,9 +64,16 @@
 <div class="vis pos-10 size-16 cont-9">
 <p class="para-2"><span class="font-7">&#x90ae;&#x653f;&#x7f16;&#x7801;&#xff1a;</span><span class="font-7">116041</span></p>
 <p class="para-2"><span class="font-7">&#x5236;&#x4f5c;</span><span class="font-7">&amp;</span><span class="font-7">&#x7ef4;&#x62a4;&#xff1a;</span><span class="font-7"> </span><span class="font-7">&#x4e1c;&#x5317;&#x5927;&#x5b66;&#x8ba1;&#x7b97;&#x673a;&#x5b66;&#x9662;</span></p>
+
+
 </div>
 </div>
 </div>
+
+<div style="margin: 0 auto;text-align:center;">
+<script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1263770329'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s13.cnzz.com/z_stat.php%3Fid%3D1263770329%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));</script>
+</div>
+
 <script type="text/javascript" src="js/jquery.js"></script>
 <script type="text/javascript" src="js/slick.js"></script>
 <script type="text/javascript" src="js/woolite.js"></script>
