--- a/news.html
+++ b/news.html
@@ -54,7 +54,7 @@
 	float:left;
 	margin-bottom: 30px;
 }
-img{
+.item img{
 	float:right;
 	width: 140px;
 	height:120px;
@@ -157,6 +157,10 @@ img{
 </div>
 </div>
 </div>
+<div style="margin: 0 auto;text-align:center;">
+<script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1263770329'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s13.cnzz.com/z_stat.php%3Fid%3D1263770329%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));</script>
+</div>
+
 <script type="text/javascript" src="js/jquery.js"></script>
 <script type="text/javascript" src="js/woolite.js"></script>
 <script type="text/javascript" src="js/news.20170824163638.js"></script>
