--- a/way.html
+++ b/way.html
@@ -95,6 +95,10 @@
 </div>
 </div>
 </div>
+<div style="margin: 0 auto;text-align:center;">
+<script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1263770329'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s13.cnzz.com/z_stat.php%3Fid%3D1263770329%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));</script>
+</div>
+
 <script type="text/javascript" src="js/jquery.js"></script>
 <script type="text/javascript" src="js/woolite.js"></script>
 <script type="text/javascript" src="js/lightbox.js"></script>
